--- a/experiencia.html
+++ b/experiencia.html
@@ -19,7 +19,7 @@
 
 	  <!-- Overlay content -->
 	  <div class="overlay-content">
-	    <a href="">Inicio</a>
+	    <a href="index.html">Inicio</a>
 		<a href="servicios.html">Servicios</a>
 		<a href="experiencia.html">Experiencia</a>
 		<a href="contacto.html">Contacto</a>
@@ -39,7 +39,7 @@
 		</div>
 	</div>
 
-	<div class="section-intro">
+	<div class="section-intro content">
 		<div class="section-header">
 			Nuestra Experiencia
 		</div>
@@ -51,7 +51,7 @@
 	</div>
 
 	<h2>Nuestros Clientes</h2>
-	<div class="showcase-container">
+	<div class="showcase-container content">
 		<div class="client">
 			<img src="images/logo.png" alt="Cliente">
 			<div class="client-overlay">
@@ -85,7 +85,7 @@
 	</div>
 
 	<h2>Nuestras Alianzas</h2>
-	<div class="showcase-container">
+	<div class="showcase-container content">
 		<div class="client">
 			<img src="images/logo.png" alt="Alianza">
 		</div>
@@ -101,7 +101,7 @@
 		<div class="copyright">
 			<a href="index.html">Política de Privacidad</a>
 			<div>Mymfer5 <b>2017</b></div>
-			<a href="http://nuva.rocks"><img src="images/nuva.svg" alt="Desarrollado por Nuva Rocks"></a>
+			<a href="http://nuva.rocks"><img class="nuva" src="images/nuva.svg" alt="Desarrollado por Nuva Rocks"></a>
 		</div>
 	</div>
 
