--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 	<div class="nav-menu">
 		<div class="logo">
-			<img src="images/logo.png" alt="Mymfer5 Integración Total">
+			<a href="index.html"><img src="images/logo.png" alt="Mymfer5 Integración Total"></a>
 		</div>
 		<div class="links">
 			<a href="index.html">Inicio</a>
@@ -37,11 +37,16 @@
 			<a href="experiencia.html">Nuestra Experiencia</a>
 			<a href="contacto.html">Contacto</a>
 		</div>
+		<div class="mobile-menu" onclick="openNav()">
+			<div></div>
+			<div></div>
+			<div></div>
+		</div>
 	</div>
 
 	<div class="intro-section">
 		<div class="gradient-overlay">
-			<h1 class="intro-header">INTEGRACIÓN TOTAL PARA TU EMPRESA</h1>
+			<h1>INTEGRACIÓN TOTAL PARA TU EMPRESA</h1>
 			<p>
 				La mejor solución para llevar tu empresa a la nube.
 			</p>
@@ -60,9 +65,9 @@
 	</div>
 	<div class="services-brief content">
 		<div class="service digital">
-			<div class="header digital">
-				<h3>Digitalización</h3>
-			</div>
+			
+			<h3 class="header">Digitalización</h3>
+			
 			<img src="images/digitalizacion.svg" alt="Digitalización de Documentos">	
 			<p>
 				Digitalizar los documentos importantes para tu empresa no tiene por qué ser complejo. Déjanos el trabajo a nosotros.
@@ -70,19 +75,17 @@
 			<a href="servicios#digital" class="link-to-service">VER MÁS</a>
 		</div>
 		<div class="service consultant">
-			<div class="header">
-				<h3>Consultoría</h3>
-			</div>
-			<img src="images/consultoría.svg" alt="Consultoría">	
+			<h3 class="header">Consultoría</h3>
+			
+			<img src="images/consultoria.svg" alt="Consultoría">	
 			<p>
 				Encontramoss las soluciones óptimas para mejorar los procesos en tu organización.
 			</p>
 			<a href="servicios#consultant" class="link-to-service">VER MÁS</a>
 		</div>
 		<div class="service storage">
-			<div class="header">
-				<h3>Almacenamiento</h3>
-			</div>
+			<h3 class="header">Almacenamiento</h3>
+			
 			<img src="images/almacenamiento.svg" alt="Almacenamiento Digital">	
 			<p>
 				Ofrecemos soluciones integrales para el almacenamiento de datos. No importa si es un servidor local o en la nube, nosotros te ayudamos.
@@ -90,9 +93,8 @@
 			<a href="servicios#storage" class="link-to-service">VER MÁS</a>
 		</div>
 		<div class="service hwsw">
-			<div class="header">
-				<h3>HW & SW</h3>
-			</div>
+			<h3 class="header">HW & SW</h3>
+			
 			<img src="images/hwsw.svg" alt="Hardware y Software">	
 			<p>
 				Equipos de Hardware a la medida, así como el Softwware de última generación que tu empresa necesita.
@@ -146,7 +148,7 @@
 		<div class="copyright">
 			<a href="index.html">Política de Privacidad</a>
 			<div>Mymfer5 <b>2017</b></div>
-			<a href="http://nuva.rocks"><img src="images/nuva.svg" alt="Desarrollado por Nuva Rocks"></a>
+			<a href="http://nuva.rocks"><img class="nuva" src="images/nuva.svg" alt="Desarrollado por Nuva Rocks"></a>
 		</div>
 	</div>
 
