--- a/servicios.html
+++ b/servicios.html
@@ -17,7 +17,7 @@
 	  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
 	  <!-- Overlay content -->
 	  <div class="overlay-content">
-	    <a href="">Inicio</a>
+	    <a href="index.html">Inicio</a>
 		<a href="servicios.html">Servicios</a>
 		<a href="experiencia.html">Experiencia</a>
 		<a href="contacto.html">Contacto</a>
@@ -34,9 +34,14 @@
 			<a href="experiencia.html">Nuestra Experiencia</a>
 			<a href="contacto.html">Contacto</a>
 		</div>
+		<div class="mobile-menu" onclick="openNav()">
+			<div></div>
+			<div></div>
+			<div></div>
+		</div>
 	</div>
 
-	<div class="section-intro">
+	<div class="section-intro content">
 		<div class="section-header">
 			Nuestros Servicios
 		</div>
@@ -48,9 +53,9 @@
 	</div>
 
 	<div class="service-box content">
-		<div class="service-info">
+		<div class="service-info digitalization">
 			<div class="service-title">
-				<img src="images/digitalización.svg" alt="Digitalización de Documentos">
+				<img src="images/digitalizacion.svg" alt="Digitalización de Documentos">
 				Digitalización
 			</div>
 			<p>
@@ -66,7 +71,7 @@
 	<div class="service-box content">
 		<div class="service-info">
 			<div class="service-title">
-				<img src="images/consultoría.svg" alt="Consultoría Especializada">
+				<img src="images/consultoria.svg" alt="Consultoría Especializada">
 				Consultoría
 			</div>
 			<p>
@@ -121,7 +126,7 @@
 		<div class="copyright">
 			<a href="index.html">Política de Privacidad</a>
 			<div>Mymfer5 <b>2017</b></div>
-			<a href="http://nuva.rocks"><img src="images/nuva.svg" alt="Desarrollado por Nuva Rocks"></a>
+			<a href="http://nuva.rocks"><img class="nuva" src="images/nuva.svg" alt="Desarrollado por Nuva Rocks"></a>
 		</div>
 	</div>
 
