--- a/experiencia.html
+++ b/experiencia.html
@@ -29,13 +29,18 @@
 
 	<div class="nav-menu">
 		<div class="logo">
-			<img src="images/logo.png" alt="Mymfer5 Integración Total">
+			<a href="index.html"><img src="images/logo.png" alt="Mymfer5 Integración Total"></a>
 		</div>
 		<div class="links">
 			<a href="index.html">Inicio</a>
 			<a href="servicios.html">Servicios</a>
 			<a href="experiencia.html">Nuestra Experiencia</a>
 			<a href="contacto.html">Contacto</a>
+		</div>
+		<div class="mobile-menu" onclick="openNav()">
+			<div></div>
+			<div></div>
+			<div></div>
 		</div>
 	</div>
 
@@ -50,7 +55,7 @@
 		</p>
 	</div>
 
-	<h2>Nuestros Clientes</h2>
+	<h2 class="experience-header">Nuestros Clientes</h2>
 	<div class="showcase-container content">
 		<div class="client">
 			<img src="images/logo.png" alt="Cliente">
@@ -84,7 +89,7 @@
 		</div>
 	</div>
 
-	<h2>Nuestras Alianzas</h2>
+	<h2 class="experience-header">Nuestras Alianzas</h2>
 	<div class="showcase-container content">
 		<div class="client">
 			<img src="images/logo.png" alt="Alianza">
