--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 			<p>
 				Digitalizar los documentos importantes para tu empresa no tiene por qué ser complejo. Déjanos el trabajo a nosotros.
 			</p>
-			<a href="servicios#digital" class="link-to-service">VER MÁS</a>
+			<a href="servicios.html#digital" class="link-to-service">VER MÁS</a>
 		</div>
 		<div class="service consultant">
 			<h3 class="header">Consultoría</h3>
@@ -81,7 +81,7 @@
 			<p>
 				Encontramoss las soluciones óptimas para mejorar los procesos en tu organización.
 			</p>
-			<a href="servicios#consultant" class="link-to-service">VER MÁS</a>
+			<a href="servicios.html#consultant" class="link-to-service">VER MÁS</a>
 		</div>
 		<div class="service storage">
 			<h3 class="header">Almacenamiento</h3>
@@ -90,7 +90,7 @@
 			<p>
 				Ofrecemos soluciones integrales para el almacenamiento de datos. No importa si es un servidor local o en la nube, nosotros te ayudamos.
 			</p>
-			<a href="servicios#storage" class="link-to-service">VER MÁS</a>
+			<a href="servicios.html#storage" class="link-to-service">VER MÁS</a>
 		</div>
 		<div class="service hwsw">
 			<h3 class="header">HW & SW</h3>
@@ -99,7 +99,7 @@
 			<p>
 				Equipos de Hardware a la medida, así como el Softwware de última generación que tu empresa necesita.
 			</p>
-			<a href="servicios#hwsw" class="link-to-service">VER MÁS</a>
+			<a href="servicios.html#hwsw" class="link-to-service">VER MÁS</a>
 		</div>
 	</div>
 
