--- a/servicios.html
+++ b/servicios.html
@@ -26,7 +26,7 @@
 
 	<div class="nav-menu">
 		<div class="logo">
-			<img src="images/logo.png" alt="Mymfer5 Integración Total">
+			<a href="index.html"><img src="images/logo.png" alt="Mymfer5 Integración Total"></a>
 		</div>
 		<div class="links">
 			<a href="index.html">Inicio</a>
@@ -52,7 +52,7 @@
 		</p>
 	</div>
 
-	<div class="service-box content">
+	<div class="service-box content" id="digital">
 		<div class="service-info digitalization">
 			<div class="service-title">
 				<img src="images/digitalizacion.svg" alt="Digitalización de Documentos">
@@ -68,8 +68,8 @@
 		</div>
 	</div>
 
-	<div class="service-box content">
-		<div class="service-info">
+	<div class="service-box content" id="consultant">
+		<div class="service-info" >
 			<div class="service-title">
 				<img src="images/consultoria.svg" alt="Consultoría Especializada">
 				Consultoría
@@ -84,7 +84,7 @@
 		</div>
 	</div>
 
-	<div class="service-box content">
+	<div class="service-box content" id="storage">
 		<div class="service-info">
 			<div class="service-title">
 				<img src="images/almacenamiento.svg" alt="Almacenamiento de Datos">
@@ -100,7 +100,7 @@
 		</div>
 	</div>
 
-	<div class="service-box content">
+	<div class="service-box content" id="hwsw">
 		<div class="service-info">
 			<div class="service-title">
 				<img src="images/hwsw.svg" alt="Hardware y Software">
