--- a/contacto.html
+++ b/contacto.html
@@ -29,7 +29,7 @@
 
 	<div class="nav-menu">
 		<div class="logo">
-			<img src="images/logo.png" alt="Mymfer5 Integración Total">
+			<a href="index.html"><img src="images/logo.png" alt="Mymfer5 Integración Total"></a>
 		</div>
 		<div class="links">
 			<a href="index.html">Inicio</a>
@@ -37,9 +37,14 @@
 			<a href="experiencia.html">Nuestra Experiencia</a>
 			<a href="contacto.html">Contacto</a>
 		</div>
+		<div class="mobile-menu" onclick="openNav()">
+			<div></div>
+			<div></div>
+			<div></div>
+		</div>
 	</div>
 
-	<div class="section-intro">
+	<div class="section-intro content">
 		<div class="section-header">
 			Contacto
 		</div>
@@ -50,11 +55,9 @@
 		</p>
 	</div>
 
-	<h2>Déjanos un Mensaje</h2>
+	<h2 class="experience-header">Déjanos un Mensaje</h2>
 	<div class="contact content">
 		<div class="form">
-			<h1>Mymfer5</h1>
-			<p>Ponte en contacdto con nostros y pronto nos comunicaremos contigo.</p>
 			<form method="POST" action="https://formspree.io/maur@gmail.com" >
 				<input type="text" name="Nombre" placeholder="Nombre" required>
 				<input type="text" name="Empresa" placeholder="Empresa" required>
@@ -79,8 +82,10 @@
 			</p>
 		</div>
 	</div>
-
-	<img src="images/iconcolor.svg" alt="Mymfer5 Integración Total" class="closing-logo">
+	
+	<div class="closing-logo-container">
+		<img src="images/iconcolor.svg" alt="Mymfer5 Integración Total" class="closing-logo">
+	</div>
 	
 	<div class="footer">
 		<div class="page-links">
@@ -92,7 +97,7 @@
 		<div class="copyright">
 			<a href="index.html">Política de Privacidad</a>
 			<div>Mymfer5 <b>2017</b></div>
-			<a href="http://nuva.rocks"><img src="images/nuva.svg" alt="Desarrollado por Nuva Rocks"></a>
+			<a href="http://nuva.rocks"><img src="images/nuva.svg" alt="Desarrollado por Nuva Rocks" class="nuva"></a>
 		</div>
 	</div>
 
